fix: 557 - disable text wrap on touch devices

--- a/src/widgets/numbers/ui/numbers/numbers.module.scss
+++ b/src/widgets/numbers/ui/numbers/numbers.module.scss
@@ -31,6 +31,7 @@
     @include media-laptop {
       align-self: flex-start;
       width: 100%;
+      text-wrap: unset;
     }
   }
 
